# scheduling_formatter

./: .cruft.json  .env  .gitignore  LICENCE  README.md  logging.conf  mkdocs.yml  pyproject.toml
.github/workflows/: checks.yml  test.yml
docs/: api_docs.md
scripts/: lint.sh
src/: app.py  lib.py
src/scheduling_formatter/: day_formatter.py  time_formatter.py  week_formatter.py
src/utils/: str_extensions.py
tests/: app_test.py  lib_test.py
tests/scheduling_formatter/: action_test.py  check_day_test.py  day_formatter_test.py  day_scheduling_test.py  format_day_test.py  lib_test.py  time_formatter_test.py  week_formatter_test.py
tests/utils/: str_extensions_test.py
tools/: run_client.sh  run_server.sh  test.sh  type_check.sh
