[tool.poetry]
name = "scheduling_formatter"
version = "0.0.1"
description = "Format open hours descriptions"
authors = [
    "Reynaldo Gil <gilcu2@gmail.com>",
]
license = "MIT"
readme = "README.md"


classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "scheduling_formatter", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9.1, <4.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"
option = "^2.1.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^75.8.0"
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
mkdocstrings = "*"
mkdocs-material = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
python-kacl = "*"
pyupgrade = "*"
tryceratops = "*"
pytest-sugar = "*"
pytest-xdist = "*"
pytest-timeout = "*"
pytest-asyncio = "^0.19.0"
pyright = "^1.1.275"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

